# tripper

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .safety-policy.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd_release.yml  ci_automerge_dependency_prs.yml  ci_cd_updated_main.yml  ci_check_dependencies.yml  ci_tests.yml  ci_update_dependencies.yml
.hooks/: generate-context-and-doc.sh  markdown-doctest.sh
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/CHANGELOG/: index.html
0.1.1/LICENSE/: index.html
0.1.1/overview/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/CHANGELOG/: index.html
0.1.2/LICENSE/: index.html
0.1.2/planned-backends/: index.html
0.1.2/tutorial/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/CHANGELOG/: index.html
0.2.0/LICENSE/: index.html
0.2.0/planned-backends/: index.html
0.2.0/tutorial/: index.html
0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
0.2.1/CHANGELOG/: index.html
0.2.1/LICENSE/: index.html
0.2.1/planned-backends/: index.html
0.2.1/tutorial/: index.html
0.2.10/: 404.html  index.html  sitemap.xml
0.2.10/CHANGELOG/: index.html
0.2.10/LICENSE/: index.html
0.2.10/backend_discovery/: index.html
0.2.10/planned-backends/: index.html
0.2.10/search/: search_index.json
0.2.10/tutorial/: index.html
0.2.11/: 404.html  index.html  sitemap.xml
0.2.11/CHANGELOG/: index.html
0.2.11/LICENSE/: index.html
0.2.11/backend_discovery/: index.html
0.2.11/planned-backends/: index.html
0.2.11/search/: search_index.json
0.2.11/tutorial/: index.html
0.2.12/: 404.html  index.html  sitemap.xml
0.2.12/CHANGELOG/: index.html
0.2.12/LICENSE/: index.html
0.2.12/backend_discovery/: index.html
0.2.12/planned-backends/: index.html
0.2.12/search/: search_index.json
0.2.12/tutorial/: index.html
0.2.13/: 404.html  index.html  sitemap.xml
0.2.13/CHANGELOG/: index.html
0.2.13/LICENSE/: index.html
0.2.13/backend_discovery/: index.html
0.2.13/planned-backends/: index.html
0.2.13/search/: search_index.json
0.2.13/tutorial/: index.html
0.2.14/: 404.html  index.html  sitemap.xml
0.2.14/CHANGELOG/: index.html
0.2.14/LICENSE/: index.html
0.2.14/backend_discovery/: index.html
0.2.14/planned-backends/: index.html
0.2.14/search/: search_index.json
0.2.14/tutorial/: index.html
0.2.15/: 404.html  index.html  objects.inv  sitemap.xml
0.2.15/CHANGELOG/: index.html
0.2.15/LICENSE/: index.html
0.2.15/backend_discovery/: index.html
0.2.15/planned-backends/: index.html
0.2.15/search/: search_index.json
0.2.15/tutorial/: index.html
0.2.16/: 404.html  index.html  sitemap.xml
0.2.16/CHANGELOG/: index.html
0.2.16/LICENSE/: index.html
0.2.16/backend_discovery/: index.html
0.2.16/planned-backends/: index.html
0.2.16/search/: search_index.json
0.2.16/tutorial/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/CHANGELOG/: index.html
0.2.2/LICENSE/: index.html
0.2.2/planned-backends/: index.html
0.2.2/search/: search_index.json
0.2.2/tutorial/: index.html
0.2.3/: 404.html  index.html  objects.inv  sitemap.xml
0.2.3/CHANGELOG/: index.html
0.2.3/LICENSE/: index.html
0.2.3/planned-backends/: index.html
0.2.3/search/: search_index.json
0.2.3/tutorial/: index.html
0.2.4/: 404.html  index.html  sitemap.xml
0.2.4/CHANGELOG/: index.html
0.2.4/LICENSE/: index.html
0.2.4/backend_discovery/: index.html
0.2.4/planned-backends/: index.html
0.2.4/search/: search_index.json
0.2.4/tutorial/: index.html
0.2.5/: 404.html  index.html  sitemap.xml
0.2.5/CHANGELOG/: index.html
0.2.5/LICENSE/: index.html
0.2.5/backend_discovery/: index.html
0.2.5/planned-backends/: index.html
0.2.5/search/: search_index.json
0.2.5/tutorial/: index.html
0.2.7/: 404.html  index.html  sitemap.xml
0.2.7/CHANGELOG/: index.html
0.2.7/LICENSE/: index.html
0.2.7/backend_discovery/: index.html
0.2.7/planned-backends/: index.html
0.2.7/search/: search_index.json
0.2.7/tutorial/: index.html
0.2.9/: 404.html  index.html  sitemap.xml
0.2.9/CHANGELOG/: index.html
0.2.9/LICENSE/: index.html
0.2.9/backend_discovery/: index.html
0.2.9/planned-backends/: index.html
0.2.9/search/: search_index.json
0.2.9/tutorial/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/CHANGELOG/: index.html
0.3.0/LICENSE/: index.html
0.3.0/backend_discovery/: index.html
0.3.0/planned-backends/: index.html
0.3.0/search/: search_index.json
0.3.0/tutorial/: index.html
0.3.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3.3/CHANGELOG/: index.html
0.3.3/LICENSE/: index.html
0.3.3/backend_discovery/: index.html
0.3.3/developers/: index.html
0.3.3/known-issues/: index.html
0.3.3/planned-backends/: index.html
0.3.3/search/: search_index.json
0.3.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.2/: 404.html  index.html  sitemap.xml
0.4.3/: 404.html  index.html  sitemap.xml
0.5.2/: 404.html  index.html  objects.inv  sitemap.xml
0.5.3/: 404.html  index.html  sitemap.xml
docs/: backend_discovery.md  developers.md  index.md  known-issues.md  overview.md  planned-backends.md  session.md  tutorial.md  validation.md
docs/units/: units.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py  paths.py  test_add_function.py  test_collection.py  test_custom_backend.py  test_eval_function.py  test_get_data.py  test_get_function.py  test_literals.py  test_markdown_doctest.py  test_namespace.py  test_session.py  test_sparql.py  test_sparqlwrapper.py  test_triplestore.py  test_utils.py
tripper/: __init__.py  errors.py  interface.py  literal.py  namespace.py  requirements.txt  search.py  semanticdatahandler.py  session.py  test.ipynb  testutils.py  triplestore.py  triplestore_extend.py  tripper.py  utils.py
(+724 files in other folders)
