[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tripper"
authors = [
    {name = "SINTEF", email = "TEAM4.0@sintef.no"},
]
description = "A triplestore wrapper for Python."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["triplestore", "ontology", "RDF"]
requires-python = ">=3.7"
dynamic = ["version"]

dependencies = [
    "typing-extensions>=4.7.0,<4.7.1; python_version<'3.8'",
    "pint>=0.16.1,<0.24",
]

[project.optional-dependencies]
pre-commit = [
    "pre-commit==4.0.1",
    "pylint==2.15.5",
]
testing-core = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
]
testing = [
    # Consistent with: dependencies (is this needed?)
    "pint>=0.16.1,<0.24",
    # Consistent with: testing-core
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    # testing
    "EMMOntoPy>=0.5.0,<0.7.1",
    "rdflib>=6.3.0,<7.0.0",
    "SPARQLWrapper>=2.0.0,<2.0.1",
    "DLite-Python>=0.5.1,<0.5.17",
    "graphviz>=0.20.1,<0.20.2",
]
docs = [
    # Consistent with: testing
    "EMMOntoPy>=0.5.0,<0.7.1",
    "rdflib>=6.3.0,<7.0.0",
    "SPARQLWrapper>=2.0.0,<2.0.1",
    "DLite-Python>=0.5.1,<0.5.17",
    # docs
    "mike==2.1.2",
    "mkdocs==1.5.3",
    "mkdocs-autorefs==0.4.1",
    "mkdocs-awesome-pages-plugin==2.9.2",
    "mkdocs-material==9.5.17",
    "mkdocstrings==0.22.0",
    "mkdocstrings-python-legacy==0.2.3",
]
dev = [
    # Consistent with: pre-commit
    "pre-commit==2.21.0",
    "pylint==2.15.5",
    # Consistent with: testing-core
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    # Consistent with testing
    "EMMOntoPy>=0.5.0,<0.7.1",
    "rdflib>=6.3.0,<7.0.0",
    "SPARQLWrapper>=2.0.0,<2.0.1",
    "DLite-Python>=0.5.1,<0.5.17",
    "graphviz>=0.20.1,<0.20.2",
    # Consistent with: docs
    "mike==2.1.2",
    "mkdocs==1.5.3",
    "mkdocs-autorefs==0.4.1",
    "mkdocs-awesome-pages-plugin==2.9.2",
    "mkdocs-material==9.5.17",
    "mkdocstrings==0.22.0",
    "mkdocstrings-python-legacy==0.2.3",
]

[project.urls]
Home = "https://github.com/EMMC-ASBL/tripper"
Documentation = "https://EMMC-ASBL.github.io/tripper"
Source = "https://github.com/EMMC-ASBL/tripper"
"Issue Tracker" = "https://github.com/EMMC-ASBL/tripper/issues"
Changelog = "https://github.com/EMMC-ASBL/tripper/blob/master/CHANGELOG.md"
Package = "https://pypi.org/project/tripper"

[tool.isort]
line_length = 79  # PEP8

[tool.black]
line-length = 79

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true

[tool.pylint]
max-line-length = 79
max-args = 10
max-public-methods = 25
max-locals = 20
disable = [
    "fixme",
]
good-names = [
    # Default
    "i", "j", "k", "ex", "Run", "_",
    # Triplestore instance
    "ts",
    # Triple components: subject, predicate, object
    "s", "p", "o",
    # Namespaces
    "EX",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rs --cov=tripper --cov-report=term --doctest-modules"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
    "ignore:::tripper.literal:243",  # Ignore warning in doctest
]
