[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tripper"
authors = [
    {name = "SINTEF", email = "TEAM4.0@sintef.no"},
]
description = "A triplestore wrapper for Python."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["triplestore", "ontology", "RDF"]
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
    "typing-extensions>=4.7.0,<4.13.1; python_version < '3.9'",
]

[project.optional-dependencies]
units = [
    "pint>=0.21.1,<0.26; python_version<'3.9'",
    "pint>=0.24.1,<0.26; python_version>='3.9'",
    "rdflib>=6.3.0,<7.0.0",
]
mappings = [
    "tripper[units]",
]
datadoc = [
    "tripper[mappings]",
    "PyLD>=2.0.0,<2.0.5",
    "PyYaml>=3.0.0,<6.0.3",  # todo: check lower version
    "requests>=2.0.0,<3.4.1",  # todo: check lower version
]
pre-commit = [
    "pre-commit==4.0.1",
    "pylint==3.3.4",
]
testing-core = [
    "pytest==8.3.4",
    "pytest-cov==5.0.0; python_version<'3.9'",
    "pytest-cov==6.0.0; python_version>='3.9'",
]
testing = [
    "tripper[datadoc,mappings,testing-core]",
    "dlite-python>=0.5.27; python_version>='3.8'",
    "emmontopy>=0.5.0,<0.7.1; python_version<'3.13'",
    "graphviz>=0.20.1,<0.20.2",
    "numpy<2.1.0; python_version>='3.13'",
    "rdflib>=6.3.0,<7.0.0",
    "sparqlwrapper>=2.0.0,<2.0.1",
]
docs = [
    "tripper[testing]",
    "mike==2.1.3",
    "mkdocs==1.6.1",
    "mkdocs-autorefs==1.4.1",
    "mkdocs-awesome-pages-plugin==2.10.1",
    "mkdocs-github-admonitions-plugin==0.0.3",
    "mkdocs-material==9.6.11",
    "mkdocstrings==0.27.0",
    "mkdocstrings-python-legacy==0.2.4",
]
dev = [
    "tripper[pre-commit,docs]",
]

[project.urls]
Home = "https://github.com/EMMC-ASBL/tripper"
Documentation = "https://EMMC-ASBL.github.io/tripper"
Source = "https://github.com/EMMC-ASBL/tripper"
"Issue Tracker" = "https://github.com/EMMC-ASBL/tripper/issues"
Changelog = "https://github.com/EMMC-ASBL/tripper/blob/master/CHANGELOG.md"
Package = "https://pypi.org/project/tripper"

[project.scripts]
datadoc = "tripper.datadoc.clitool:main"
keywords = "tripper.datadoc.keywords:main"

[tool.isort]
line_length = 79  # PEP8

[tool.black]
line-length = 79

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true
#explicit-package-bases = true


[tool.pylint]
max-line-length = 80
max-args = 10
max-public-methods = 25
max-locals = 20
disable = [
    "fixme",
    "invalid-name",
    "too-many-positional-arguments",
]
good-names = [
    # Default
    "i", "j", "k", "ex", "Run", "_",
    # Triplestore instance
    "ts",
    # Triple components: subject, predicate, object
    "s", "p", "o",
    # Namespaces
    "EX",
    # dict, value, file, keyword...
    "d", "v", "f", "kw",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rs --cov=tripper --cov-report=term --doctest-modules --doctest-ignore-import-errors"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
    "ignore:::tripper.literal:243",  # Ignore warning in doctest
]

[tool.setuptools.package-data]
"tripper.context" = ["*.json", "*.yaml"]


# Note the quotes around dlite.python_storage_plugins to escape the embedded dot
[project.entry-points."tripper.keywords"]
"tripper/context/0.3" = "default"
